Bug 417297 - Timestamp of older tweets is never updated
Summary: Timestamp of older tweets is never updated
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: Twitter (other bugs)
Version First Reported In: 1.7.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Scarpino
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-08 09:19 UTC by Antonio Rojas
Modified: 2020-08-25 07:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2020-02-08 09:19:23 UTC
SUMMARY
With 1.6, the timestamp of all tweets of the TL ("5 minutes ago") was updated every time the TL was refreshed. In 1.7 this no longer happens, so tweets stay forever with the timestamp of the first time they were retrieved.
Comment 1 Antonio Rojas 2020-02-08 17:37:56 UTC
This comes from https://cgit.kde.org/choqok.git/commit/?id=ffff0c3e - is it really intentional that the timestamp is now static? In that case it shouldn't be displayed in relative format, because it gets outdated almost immediately.
Comment 2 Bug Janitor Service 2020-08-01 20:43:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/choqok/-/merge_requests/2
Comment 3 Andrea Scarpino 2020-08-25 07:01:29 UTC
Git commit cc0d6127ee90c25e4d79aad3bb90b284820e223b by Andrea Scarpino.
Committed on 25/08/2020 at 07:00.
Pushed by scarpino into branch 'master'.

Partially revert ffff0c3e, which made signatures static as a side effect

M  +1    -1    helperlibs/twitterapihelper/twitterapipostwidget.cpp
M  +9    -2    libchoqok/ui/postwidget.cpp
M  +1    -1    microblogs/mastodon/mastodonpostwidget.cpp
M  +1    -1    microblogs/pumpio/pumpiopostwidget.cpp

https://invent.kde.org/network/choqok/commit/cc0d6127ee90c25e4d79aad3bb90b284820e223b