Partially revert ffff0c3e, which made signatures static as a side effect

BUG: 417297